<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">考试系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_now">立即登录</string>
    <string name="login">登录</string>
    <string name="logout">注销登录</string>
    <string name="tip">登录后下载需要学习的试题</string>
    <string name="tip_login">可下载试题</string>

    <string name="my_info">我的资料</string>
    <string name="my_photo">头像</string>
    <string name="my_name">姓名</string>
    <string name="my_sex">性别</string>
    <string name="my_dept">所属部门</string>

    <string name="my_question_bank">我的题库</string>
    <string name="down_question_bank">下载题库</string>
    <string name="param_setting">设置</string>
    <string name="webIp">服务器IP地址</string>
    <string name="padType">终端型号</string>
    <string name="padTypeDefault">ExPad</string>
    <string name="padNumber">终端串号</string>
    <string name="padNumberDefault">432543856732</string>
    <string name="padVersion">版本号</string>
    <string name="padVersionDefault">v1.0</string>
    <string name="username">帐号:</string>
    <string name="user_name">请输入您的帐号</string>
    <string name="password">密码:</string>
    <string name="pass_word">请输入密码</string>
    <string name="singname">用户名</string>
    <string name="save_usercode">记住用户名</string>
    <string name="sace_password">记住密码</string>
    <string name="tijiao">交卷</string>
    <string name="open_answer">查看详解</string>
    <string name="close_answer">收起详解</string>
    <string name="q_number">000/000</string>
    <string name="q_time">00:00</string>
    <string name="true_a">正确</string>
    <string name="false_a">错误</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="zero">0</string>
    <string name="submit">提交</string>
    <string name="previos">上一题</string>
    <string name="next">下一题</string>
    <string name="check_exampp">查看试卷</string>
    <string name="only_wrongqq">只看错题</string>
    <string name="grades">分数</string>
    <string name="grade">分</string>
    <string name="useTime">用时</string>
    <string name="searchquestion">问题查询</string>
    <string name="search">搜索</string>
    <!-- &#8230; 表示三个点 ... -->
    <string name="searchTip">请输入关键字&#8230;</string>
    <string name="specialtype">专项练习</string>
    <string name="panduanti">判断题</string>
    <string name="danxuanti">单项选择题</string>
    <string name="duoxuanti">多项选择题</string>
    <string name="tip_dialog">模拟考试需要先登录，请登录&#8230;</string>

    <string name="exam_tip">答题技巧</string>

    <string name="statistic">统&#160;&#160;&#160;&#160;计</string>
    <string name="exam_notes">考试记录</string>
    <string name="my_wrong">我的错题</string>
    <string name="my_collect">我的收藏</string>
    <string name="wrong_exam">答错题</string>
    <string name="right_exam">答对题</string>
    <string name="undone_exam">未做题</string>
    <string name="collect_exam">收藏题</string>
    <string name="title_activity_tip_exam">TipExamActivity</string>
    <string name="title_activity_record_exam">RecordExamActivity</string>
    <string name="title_activity_my_wrong_exam">MyWrongExamActivity</string>
    <string name="title_activity_collect_exam">CollectExamActivity</string>
</resources>
