<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottom_bar_DeepSkyBlue" >

        <TextView
            android:id="@+id/textView1"
            style="@style/TitleTextViewFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/my_info" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dip"
            android:layout_height="45dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:padding="15dip"
            android:src="@drawable/web_browser_back" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/my_info_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/gray" />
        <LinearLayout
            android:id="@+id/my_photo_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_photo"
                android:padding="10dip"
                android:textSize="12sp"
                android:textColor="@color/black"/>
            <ImageView 
                android:id="@+id/my_photo_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/my_photo"
                />
            
        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/gray" />
        <LinearLayout
            android:id="@+id/my_name_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_name"
                android:padding="10dip"
                android:textSize="12sp"
                android:textColor="@color/black"/>
            <TextView 
                android:id="@+id/my_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_name"
                android:layout_gravity="right"
                android:padding="10dip"
                android:textSize="12sp"
                android:textColor="@color/black"/>
            
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/gray" />
        <LinearLayout
            android:id="@+id/my_sex_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/my_sex"
                android:padding="10dip"
                android:textSize="12sp"
                android:textColor="@color/black"/>
            <TextView 
                android:id="@+id/my_sex_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_sex"
                android:layout_gravity="right"
                android:padding="10dip"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/gray" 
            android:padding="5dip"/>
        <LinearLayout
            android:id="@+id/my_dept_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/my_dept"
                android:padding="10dip"
                android:textSize="12sp"
                android:textColor="@color/black"/>
            <TextView 
                android:id="@+id/my_dept_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_dept"
                android:layout_gravity="right"
                android:padding="10dip"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>