<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottom_bar_DeepSkyBlue" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dip"
            android:layout_height="45dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:padding="15dip"
            android:src="@drawable/web_browser_back" />

        <TextView
            android:id="@+id/textView1"
            style="@style/TitleTextViewFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/margin_15"
            android:text="@string/searchquestion" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:background="@color/gray"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="10dip"
            android:layout_weight="10"
            android:background="@drawable/common_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/list_search_text"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/searchTip"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/search"
                android:padding="5dip"
                android:src="@drawable/search_btn"/>
        </LinearLayout>
    </LinearLayout>
	<ListView 
	    android:id="@+id/question_listview"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    ></ListView>
</LinearLayout>